--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
   <body>
     <header>
       <h1 class="logo">Feriados</h1>
-      <nav>
-        <button id="prev" class="btn">&larr;</button>
-        <time class="calendar-title">Mayo 2020</time>
-        <button id="next" class="btn">&rarr;</button>
-      </nav>
+      <time class="calendar-title">Mayo 2020</time>
     </header>
     <main>
       <svg class="loading swing"version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" enable-background="new 0 0 48 48"> <path fill="#CFD8DC" d="M5,38V14h38v24c0,2.2-1.8,4-4,4H9C6.8,42,5,40.2,5,38z"/> <path fill="#F44336" d="M43,10v6H5v-6c0-2.2,1.8-4,4-4h30C41.2,6,43,7.8,43,10z"/> <g fill="#B71C1C"> <circle cx="33" cy="10" r="3"/> <circle cx="15" cy="10" r="3"/> </g> <g fill="#B0BEC5"> <path d="M33,3c-1.1,0-2,0.9-2,2v5c0,1.1,0.9,2,2,2s2-0.9,2-2V5C35,3.9,34.1,3,33,3z"/> <path d="M15,3c-1.1,0-2,0.9-2,2v5c0,1.1,0.9,2,2,2s2-0.9,2-2V5C17,3.9,16.1,3,15,3z"/> </g> <g fill="#90A4AE"> <rect x="13" y="20" width="4" height="4"/> <rect x="19" y="20" width="4" height="4"/> <rect x="25" y="20" width="4" height="4"/> <rect x="31" y="20" width="4" height="4"/> <rect x="13" y="26" width="4" height="4"/> <rect x="19" y="26" width="4" height="4"/> <rect x="25" y="26" width="4" height="4"/> <rect x="31" y="26" width="4" height="4"/> <rect x="13" y="32" width="4" height="4"/> <rect x="19" y="32" width="4" height="4"/> <rect x="25" y="32" width="4" height="4"/> <rect x="31" y="32" width="4" height="4"/></g></svg>
       <ol class="timeline"></ol>
     </main>
-    <footer class="share-buttons">
-      <p>with <i class="heart">&#10084;</i> by <a href="https://twitter.com/pazguille" target="_blank" rel="noopener">pazguille</a></p>
-    </footer>
+    <nav>
+      <button id="prev" class="btn">&larr;</button>
+      <button id="next" class="btn">&rarr;</button>
+
+      <footer class="share-buttons">
+        <p>with <i class="heart">&#10084;</i> by <a href="https://twitter.com/pazguille" target="_blank" rel="noopener">pazguille</a></p>
+      </footer>
+    </nav>
+
 
     <script>
       window.addEventListener('load', () => {
@@ -41,6 +43,7 @@
         const $title = document.querySelector('.calendar-title');
         const $loading = document.querySelector('.loading');
         const $timeline = document.querySelector('.timeline');
+        const $main = document.querySelector('main');
 
         function moveMonthTo(moveTo) {
           const moveToNum = moveTo === 'next' ? 1 : -1;
@@ -137,15 +140,68 @@
             moveMonthTo(e.target.id);
           }
         });
-      
-      //   function feedCats(n) {
-      //     catsWorker.postMessage({topic: 'meow', value: n});
-      //   };
 
-      //   catsWorker.addEventListener('message', e => {
-      //     createCats(JSON.parse(e.data));
-      //   });
-        
+
+        const msPointerSupported = navigator.msPointerEnabled;
+        const touch = {
+          'start': msPointerSupported ? 'MSPointerDown' : 'touchstart',
+          'move': msPointerSupported ? 'MSPointerMove' : 'touchmove',
+          'end': msPointerSupported ? 'MSPointerUp' : 'touchend'
+        };
+        const touchPassiveListener = touch.start === 'touchstart' ? { passive: true, capture: false } : false;
+        const movePassiveListener = touch.start === 'touchstart' ? { passive: false, capture: false } : false;
+        let startOffsetX = 0;
+        let startOffsetY = 0;
+        let scrolling = false;
+        const tolerance = 70;
+        let currentOffsetX = 0;
+
+        function resetTouchFn(eve) {
+          if (typeof eve.touches === 'undefined') {
+            return;
+          }
+          startOffsetX = eve.touches[0].pageX;
+          startOffsetY = eve.touches[0].pageY;
+        }
+
+        function onTouchEndFn() {
+          if (!scrolling) {
+            const direction = startOffsetX > currentOffsetX ? 'next' : 'prev';
+            moveMonthTo(direction);
+            return;
+          }
+          scrolling = false;
+          return;
+        };
+
+        function onTouchMoveFn(eve) {
+          if (scrolling || typeof eve.touches === 'undefined') {
+            return;
+          }
+
+          var dif_x = eve.touches[0].pageX - startOffsetX;
+          var dif_y = eve.touches[0].pageY - startOffsetY;
+          var touchAngle = (Math.atan2(Math.abs(dif_y), Math.abs(dif_x)) * 180) / Math.PI;
+          var isScrolling = touchAngle > 45;
+
+          if (isScrolling) {
+            scrolling = true;
+            return;
+          }
+
+          if (eve.cancelable) {
+            eve.preventDefault();
+          }
+          eve.stopPropagation();
+
+          if (Math.abs(dif_x) > 20) {
+            currentOffsetX = dif_x
+          }
+        };
+
+        $main.addEventListener(touch.start, resetTouchFn, touchPassiveListener);
+        $main.addEventListener(touch.move, onTouchMoveFn, movePassiveListener);
+        $main.addEventListener(touch.end, onTouchEndFn, touchPassiveListener);
       });
     </script>
   </body>
