--- a/dev.html
+++ b/dev.html
@@ -21,7 +21,15 @@
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/base.css">
     <link rel="stylesheet" href="src/css/feriados.css">
-    <title>Feriados</title>
+
+    <title>Feriados Nacionales de Argentina</title>
+    <meta name="Description" content="Feriados nacionales de la República Argentina. Consultá los días no laborables, feriados inamovibles y los feriados puente.">
+    <meta name="keywords" content="feriados, argentino, nacional, laborables, inamovibles, puente, gobierno argentino, gobierno nacional, República Argentina, calendario" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@pazguille" />
+    <meta name="twitter:title" content="Feriados Nacionales de Argentina" />
+    <meta name="twitter:description" content="Listado de los feriados nacionales en Argentina para planificar descansos y escapadas." />
+    <meta name="twitter:image" content="https://cldup.com/FSPI17XfNj.jpeg" />
   </head>
   <body>
     <header>
