Update twitter meta tags.

--- a/dev.html
+++ b/dev.html
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@pazguille" />
     <meta name="twitter:title" content="Feriados Nacionales de Argentina" />
-    <meta name="twitter:description" content="Listado de los feriados nacionales en Argentina para planificar descansos y escapadas." />
+    <meta name="twitter:description" content="Consultá el listado de los feriados nacionales en Argentina para ponerte felíz que no vas a trabajar." />
     <meta name="twitter:image" content="https://cldup.com/FSPI17XfNj.jpeg" />
   </head>
   <body>
