--- a/dev.html
+++ b/dev.html
@@ -29,12 +29,16 @@
     <meta name="twitter:creator" content="@pazguille" />
     <meta name="twitter:title" content="Feriados Nacionales de Argentina" />
     <meta name="twitter:description" content="Consultá el listado de los feriados nacionales en Argentina para ponerte felíz que no vas a trabajar." />
-    <meta name="twitter:image" content="https://cldup.com/FSPI17XfNj.jpeg" />
+    <meta name="twitter:image" content="https://pazguille.github.io/feriados/src/assets/favicon-precomposed.png" />
   </head>
   <body>
     <header>
       <h1 class="logo">Feriados</h1>
       <time class="calendar-title">Mayo 2020</time>
+      <button class="bright-env">
+        <span id="light-mode">☀</span>
+        <span id="dark-mode" hidden>☾</span>
+      </button>
     </header>
     <main>
       <svg class="loading swing"version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" enable-background="new 0 0 48 48"> <path fill="#CFD8DC" d="M5,38V14h38v24c0,2.2-1.8,4-4,4H9C6.8,42,5,40.2,5,38z"/> <path fill="#F44336" d="M43,10v6H5v-6c0-2.2,1.8-4,4-4h30C41.2,6,43,7.8,43,10z"/> <g fill="#B71C1C"> <circle cx="33" cy="10" r="3"/> <circle cx="15" cy="10" r="3"/> </g> <g fill="#B0BEC5"> <path d="M33,3c-1.1,0-2,0.9-2,2v5c0,1.1,0.9,2,2,2s2-0.9,2-2V5C35,3.9,34.1,3,33,3z"/> <path d="M15,3c-1.1,0-2,0.9-2,2v5c0,1.1,0.9,2,2,2s2-0.9,2-2V5C17,3.9,16.1,3,15,3z"/> </g> <g fill="#90A4AE"> <rect x="13" y="20" width="4" height="4"/> <rect x="19" y="20" width="4" height="4"/> <rect x="25" y="20" width="4" height="4"/> <rect x="31" y="20" width="4" height="4"/> <rect x="13" y="26" width="4" height="4"/> <rect x="19" y="26" width="4" height="4"/> <rect x="25" y="26" width="4" height="4"/> <rect x="31" y="26" width="4" height="4"/> <rect x="13" y="32" width="4" height="4"/> <rect x="19" y="32" width="4" height="4"/> <rect x="25" y="32" width="4" height="4"/> <rect x="31" y="32" width="4" height="4"/></g></svg>
@@ -48,8 +52,17 @@
         <p>with <i class="heart">&#10084;</i> by <a href="https://twitter.com/pazguille" target="_blank" rel="noopener">pazguille</a></p>
       </footer>
     </nav>
-
     <script>
+      const userBright = localStorage.getItem('user-bright-env');
+      const osBright = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark-mode' : 'light-mode';
+      document.documentElement.setAttribute('data-bright-env', userBright || osBright);
+      localStorage.setItem('os-bright-env', osBright);
+      if (userBright && userBright !== osBright) {
+        const switchToMode = userBright === 'light-mode' ? 'dark-mode' : 'light-mode';
+        document.documentElement.setAttribute('data-bright-env', userBright);
+        document.querySelector(`#${userBright}`).setAttribute('hidden', 'hidden');
+        document.querySelector(`#${switchToMode}`).removeAttribute('hidden');
+      }
       window.addEventListener('load', () => {
         const holidaysData = {};
 
@@ -101,7 +114,7 @@
 
           if (holidaysData[newDate.getFullYear()] === null) {
             return $timeline.insertAdjacentHTML('beforeend',
-            `<li class="nodata">No tengo informacion para el ${newDate.getFullYear()} :(</li>`);
+            `<li class="nodata">No tengo información para el ${newDate.getFullYear()} :(</li>`);
           }
 
           const monthHolidays = holidaysData[[newDate.getFullYear()]][newDate.getMonth()];
@@ -219,6 +232,16 @@
         $main.addEventListener(touch.start, resetTouchFn, touchPassiveListener);
         $main.addEventListener(touch.move, onTouchMoveFn, movePassiveListener);
         $main.addEventListener(touch.end, onTouchEndFn, touchPassiveListener);
+
+        const $bright = document.querySelector('.bright-env');
+        $bright.addEventListener('click', () => {
+          const currentMode = document.documentElement.getAttribute('data-bright-env')
+          const switchToMode = currentMode === 'light-mode' ? 'dark-mode' : 'light-mode';
+          document.documentElement.setAttribute('data-bright-env', switchToMode);
+          document.querySelector(`#${switchToMode}`).setAttribute('hidden', 'hidden');
+          document.querySelector(`#${currentMode}`).removeAttribute('hidden');
+          localStorage.setItem('user-bright-env', switchToMode);
+        });
       });
     </script>
   </body>
