Fix styles and update emojis.

--- a/dev.html
+++ b/dev.html
@@ -36,8 +36,8 @@
       <h1 class="logo">Feriados</h1>
       <time class="calendar-title">Mayo 2020</time>
       <button class="bright-env">
-        <span id="light-mode">☀</span>
-        <span id="dark-mode" hidden>☾</span>
+        <span id="light-mode">🔅</span>
+        <span id="dark-mode" hidden>🌙</span>
       </button>
     </header>
     <main>
