--- a/dev.html
+++ b/dev.html
@@ -36,8 +36,8 @@
       <h1 class="logo">Feriados</h1>
       <time class="calendar-title">Cargando...</time>
       <button type="button" class="bright-env">
-        <span id="light-mode">🔅</span>
-        <span id="dark-mode" hidden>🌙</span>
+        <span id="light-mode" class="icon sun"></span>
+        <span id="dark-mode" class="icon moon" hidden></span>
       </button>
     </header>
     <main>
