Add requestIdleCallback polyfill.

--- a/dev.html
+++ b/dev.html
@@ -71,6 +71,18 @@
     </div>
 
     <script type="module">
+      window.requestIdleCallback = window.requestIdleCallback ||
+        function (cb) {
+          var start = Date.now();
+          return setTimeout(function () {
+            cb({
+              didTimeout: false,
+              timeRemaining: function () {
+                return Math.max(0, 50 - (Date.now() - start));
+              }
+            });
+          }, 1);
+        };
       const PATH = './src/js';
       import(`${PATH}/bright.js`);
       import { fetchData } from './src/js/calendar.js';
