Add arrow button to toggle layout.

--- a/dev.html
+++ b/dev.html
@@ -68,6 +68,7 @@
         <div class="timeline-mask">
           <ol class="timeline" data-js="holiday-selection"></ol>
         </div>
+        <i class="arrow" data-js="layout-icon"></i>
         <ol class="year" data-hidden data-js="year-selection"></ol>
       </main>
     </div>
