--- a/dev.html
+++ b/dev.html
@@ -31,14 +31,14 @@
     <link rel="modulepreload" href="./src/js/dates.js">
     <link rel="modulepreload" href="./src/js/calendar.js">
 
-    <title>Feriados Nacionales de Argentina</title>
+    <title>Feriados Nacionales de Argentina 2020</title>
     <meta name="Description" content="Feriados nacionales de la República Argentina. Consultá los días no laborables, feriados inamovibles y los feriados puente.">
     <meta name="keywords" content="feriados, argentino, nacional, laborables, inamovibles, puente, gobierno argentino, gobierno nacional, República Argentina, calendario" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@pazguille" />
     <meta name="twitter:title" content="Feriados Nacionales de Argentina" />
     <meta name="twitter:description" content="Consultá el listado de los feriados nacionales en Argentina para ponerte felíz que no vas a trabajar." />
-    <meta name="twitter:image" content="https://pazguille.github.io/feriados/src/assets/favicon-precomposed.png" />
+    <meta name="twitter:image" content="https://feriados.pazguille.me/feriados/src/assets/favicon-precomposed.png" />
   </head>
   <body>
     <div id="menu" class="menu slideout-menu slideout-menu-right" data-js="menu-container">
