Feature: Add holidays for Chile and Uruguay. Fix: Update width on large screens.

--- a/dev.html
+++ b/dev.html
@@ -8,7 +8,7 @@
 
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Feriados">
+    <meta name="apple-mobile-web-app-title" content="FeriadosAR">
 
     <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" href="src/assets/apple-launch-1242x2208.png">
     <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="src/assets/apple-launch-1242x2208.png">
@@ -35,7 +35,7 @@
     <link rel="modulepreload" href="./dev/js/calendar.js">
 
     <title>Feriados Nacionales de Argentina 2020</title>
-    <meta name="Description" content="Feriados nacionales de la República Argentina. Consultá los días no laborables, feriados inamovibles y los feriados puente.">
+    <meta name="description" content="Feriados nacionales de la República Argentina 2020. Consultá los días no laborables, feriados inamovibles y los feriados puente.">
     <meta name="keywords" content="feriados, argentino, nacional, laborables, inamovibles, puente, gobierno argentino, gobierno nacional, República Argentina, calendario" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@pazguille" />
@@ -60,6 +60,14 @@
         <h1 class="logo">
           <time class="calendar-title" data-js="layout-title">Cargando...</time>
         </h1>
+        <!-- <nav class="month-navigation" data-js="move-month">
+          <button type="button" class="prev-month" data-js-move="prevMonth" aria-label="Ir al mes anterior">
+            <i class="arrow arrow-left" ></i>
+          </button>
+          <button type="button" class="next-month" data-js-move="nextMonth" aria-label="Ir al mes próximo">
+            <i class="arrow arrow-right" ></i>
+          </button>
+        </nav> -->
         <button type="button" aria-label="Abrir menú de opciones" class="hamburger" data-js="slideout-toggle">☰</button>
       </header>
       <main>
